<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>coin</groupId>
    <artifactId>japsa</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    
	<repositories>
	  <repository>
	    <id>libs</id>
	    <name>libs</name>
	    <url>file://${project.basedir}/libs</url>
	  </repository>
	</repositories>
    
    <dependencies>
<dependency>
    <groupId>junit</groupId>
    <artifactId>junit</artifactId>
    <version>4.8.1</version>
    <scope>test</scope>
</dependency>
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-math3</artifactId>
		    <version>3.6</version>
		</dependency>
		<dependency>
		    <groupId>commons-io</groupId>
		    <artifactId>commons-io</artifactId>
		    <version>2.5</version>
		</dependency>
		<dependency>
		    <groupId>javax.json</groupId>
		    <artifactId>javax.json-api</artifactId>
		    <version>1.0</version>
		</dependency>
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-api</artifactId>
		    <version>1.7.25</version>
		</dependency>
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-simple</artifactId>
		    <version>1.7.25</version>
		</dependency>
		<dependency>
		    <groupId>org.jfree</groupId>
		    <artifactId>jcommon</artifactId>
		    <version>1.0.23</version>
		</dependency>
		<dependency>
		    <groupId>org.jfree</groupId>
		    <artifactId>jfreechart</artifactId>
		    <version>1.0.19</version>
		</dependency>
		<dependency>
		    <groupId>com.google.guava</groupId>
		    <artifactId>guava</artifactId>
		    <version>18.0</version>
		</dependency>
		<dependency>
		    <groupId>com.github.samtools</groupId>
		    <artifactId>htsjdk</artifactId>
		    <version>2.18.2</version>
		</dependency>
		<dependency>
		    <groupId>org.hdfgroup</groupId>
		    <artifactId>hdf-java</artifactId>
		    <version>2.6.1</version>
		</dependency>
		<dependency>
		    <groupId>com.colloquial</groupId>
		    <artifactId>arithcode</artifactId>
		    <version>1.1</version>
		</dependency>
		<dependency>
		    <groupId>de.unikonstanz.inf</groupId>
		    <artifactId>mdsj</artifactId>
		    <version>0.2</version>
		</dependency>
		<dependency>
		    <groupId>nz.ac.auckland</groupId>
		    <artifactId>pal</artifactId>
		    <version>1.5.1.1</version>
		</dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.3</version>
        </dependency>

        <!--
        JRI.jar
        JRIEngine.jar
        REngine.jar
        colloquial.jar
        jfxrt.jar
        jhdf5.jar
        jhdfobj.jar
        -->
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>shade</goal>
                        </goals>
						<!--                         
						<configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                            </transformers>
                        </configuration> 
                        -->
                        <configuration>
								<!--                             
								<shadedArtifactAttached>true</shadedArtifactAttached>
 								-->                            
 								<transformers>
                				<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  				<manifestEntries>
                    				<Main-Class>japsa.tools.bio.np.RealtimeSpeciesTypingCmd</Main-Class>
                  				</manifestEntries>
               			 		</transformer>				
              				</transformers>
              				<finalName>japsa-1.9-3c</finalName>
              				<excludes>
              					<exclude>japsa/**</exclude>
              				</excludes>
              				<includes>
              					<include>japsa/tools/bio/np/RealtimeSpeciesTypingCmd</include>
						<include>japsa/bio/phylo/CSSProcessCommand</include>
              				</includes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <testSourceDirectory>src/test/java</testSourceDirectory>
                    <systemPropertyVariables>
                        <log4j.configuration>log4j.properties</log4j.configuration>
<!--
                        <log4j.configuration>file:${project.build.testOutputDirectory}/log4j-surefire.properties</log4j.configuration>
-->
                    </systemPropertyVariables>
                </configuration>
            </plugin>
        </plugins>

    </build>
</project>
